anyway From Mac

--- a/simple_match.html
+++ b/simple_match.html
@@ -371,7 +371,8 @@ receive_matched: [{
     now_checking_match: false,
     match_url_array: [],
     matched_data_ary: null,
-    endpoint: 'http://localhost:8000',
+    // endpoint: 'http://localhost:8000',
+    endpoint: 'https://cotton-concrete-catsup.glitch.me',
     // endpoint: 'http://127.0.0.1:3000',
     // endpoint: 'https://cotton-concrete-catsup.glitch.me',
 
